// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[CardsProject] Renders card-project correctly and matches snapshot 1`] = `
<DocumentFragment>
  <div>
    CardsProject Mock
  </div>
</DocumentFragment>
`;

exports[`[PortfolioPage] should render desktop view correctly 1`] = `
<DocumentFragment>
  <main
    class="container"
    style="cursor: grab; position: fixed; top: 0px; left: 0px; width: 100%; height: 100%; overflow: hidden;"
  >
    <div>
      CardsProject Mock
    </div>
  </main>
</DocumentFragment>
`;

exports[`[PortfolioPage] should render mobile view correctly 1`] = `
<DocumentFragment>
  <main
    class="container"
    style="cursor: grab; position: fixed; top: 0px; left: 0px; width: 100%; height: 100%; overflow: hidden;"
  >
    <div>
      CardsProject Mock
    </div>
  </main>
</DocumentFragment>
`;
